--- a/aws-cli/Dockerfile
+++ b/aws-cli/Dockerfile
@@ -1,5 +1,5 @@
 FROM alpine:3.3
-RUN apk -v --update add python py-pip && \
+RUN apk -v --update add python py-pip groff && \
     pip install awscli && \
     apk -v --purge del py-pip && \
     rm /var/cache/apk/*
