--- a/aws-cli/Dockerfile
+++ b/aws-cli/Dockerfile
@@ -1,6 +1,11 @@
 FROM alpine:3.3
-RUN apk -v --update add python py-pip groff && \
-    pip install awscli && \
+RUN apk -v --update add \
+        python \
+        py-pip \
+        groff \
+        less \
+        && \
+    pip install --upgrade awscli && \
     apk -v --purge del py-pip && \
     rm /var/cache/apk/*
 VOLUME /root/.aws
