Add s3cmd to aws-cli

--- a/aws-cli/Dockerfile
+++ b/aws-cli/Dockerfile
@@ -5,7 +5,7 @@ RUN apk -v --update add \
         groff \
         less \
         && \
-    pip install --upgrade awscli && \
+    pip install --upgrade awscli s3cmd && \
     apk -v --purge del py-pip && \
     rm /var/cache/apk/*
 VOLUME /root/.aws
