--- a/http/ks.cfg
+++ b/http/ks.cfg
@@ -2,12 +2,13 @@ install
 cdrom
 lang en_US.UTF-8
 keyboard us
+unsupported_hardware
 network --onboot yes --device eth0 --bootproto dhcp --noipv6
 rootpw --plaintext vagrant
-firewall --enabled --service=ssh
+firewall --disabled
 authconfig --enableshadow --passalgo=sha512
 selinux --disabled
-timezone US/Pacific
+timezone UTC
 bootloader --location=mbr --driveorder=sda --append="crashkernel=auto rhgb quiet"
 
 text
@@ -17,9 +18,12 @@ zerombr
 clearpart --all --initlabel
 autopart
 
-auth  --useshadow  --enablemd5
+auth --enableshadow --passalgo=sha512 --kickstart
 firstboot --disabled
+eula --agreed
+services --enabled=NetworkManager,sshd
 reboot
+user --name=vagrant --plaintext --password vagrant --groups=vagrant,wheel
 
 %packages --ignoremissing
 @core
@@ -34,18 +38,37 @@ docker
 bind-utils
 kernel-devel
 kernel-headers
+# unnecessary firmware
+-aic94xx-firmware
+-atmel-firmware
+-b43-openfwwf
+-bfa-firmware
 -ipw2100-firmware
 -ipw2200-firmware
 -ivtv-firmware
+-iwl100-firmware
+-iwl1000-firmware
+-iwl3945-firmware
+-iwl4965-firmware
+-iwl5000-firmware
+-iwl5150-firmware
+-iwl6000-firmware
+-iwl6000g2a-firmware
+-iwl6050-firmware
+-libertas-usb8388-firmware
+-ql2100-firmware
+-ql2200-firmware
+-ql23xx-firmware
+-ql2400-firmware
+-ql2500-firmware
+-rt61pci-firmware
+-rt73usb-firmware
+-xorg-x11-drv-ati-firmware
+-zd1211-firmware
+
 %end
 
 %post
-/usr/sbin/groupadd -g 501 vagrant
-/usr/sbin/groupadd nogroup
-/usr/sbin/groupadd docker
-/usr/sbin/useradd vagrant -u 501 -g vagrant -G wheel
-/usr/sbin/usermod -aG docker vagrant
-echo "vagrant"|passwd --stdin vagrant
 echo "vagrant        ALL=(ALL)       NOPASSWD: ALL" >> /etc/sudoers.d/vagrant
 echo "Defaults:vagrant !requiretty"                 >> /etc/sudoers.d/vagrant
 chmod 0440 /etc/sudoers.d/vagrant
