Update Docker, Ansible, and add support for creating VMware images
This commit updates the configuration code in this repository and
includes the following changes:

* Facilitate image creation suitable for VMware Fusion and Worksation
* Update Docker version to latest CE
* Update Ansible to latest release
* Refactor some Ansible code for compatibility's sake
* Refactor VirtualBox Guest Addition / VMware Tools installation

Plus a few other minor bits of housekeeping and maintenance.

--- a/ansible/dcos-node.yml
+++ b/ansible/dcos-node.yml
@@ -1,13 +1,14 @@
 ---
-# This playbook prepares a Centos7 VM for DC/OS installation with Vagrant on VirtualBox
+# This playbook prepares a CentOS 7 VM for DC/OS installation via Vagrant
 
 - hosts: all
-  gather_facts: no
+  gather_facts: yes
   become: yes
   become_user: root
   become_method: sudo
   roles:
-  - role: dcos-node
-  - role: debug
-  - role: vagrant
-  - role: virtualbox
+    - dcos-node
+    - debug
+    - vagrant
+    - guestadditions
+    - cleanup
