--- a/ansible/roles/debug/tasks/bind-utils.yml
+++ b/ansible/roles/debug/tasks/bind-utils.yml
@@ -1,7 +1,5 @@
 ---
 - name: Install bind-utils
-  yum: >
-    name={{item}}
-    state=present
-  with_items:
-   - bind-utils
+  yum:
+    name: bind-utils
+    state: installed
