--- a/ansible/roles/dcos-node/tasks/docker-cache.yml
+++ b/ansible/roles/dcos-node/tasks/docker-cache.yml
@@ -2,28 +2,24 @@
 # Cache Docker images for use by the bootstrap machine to speed up install
 
 - name: Install Docker-Py
-  pip: name=docker-py version=1.9.0
+  pip:
+    name: docker-py
+    version: 1.9.0
 
 - name: Cache jplock/zookeeper docker image
-  docker:
-    name: zookeeper
-    image: jplock/zookeeper:latest #TODO: use 3.4.8
-    state: present
-    pull: missing # don't start, just pull
-    net: default # workaround bug: https://github.com/ansible/ansible-modules-core/issues/1885
+  docker_image:
+    name: jplock/zookeeper:3.5.5
+    tag: zookeper
+    source: pull
 
 - name: Cache nginx docker image
-  docker:
-    name: nginx
-    image: nginx:latest #TODO: use 1.11.3-alpine
-    state: present
-    pull: missing # don't start, just pull
-    net: default # workaround bug: https://github.com/ansible/ansible-modules-core/issues/1885
+  docker_image:
+    name: nginx:latest
+    tag: nginx
+    source: pull
 
 - name: Cache registry docker image
-  docker:
-    name: registry
-    image: registry:2 #TODO: use 2.5.0
-    state: present
-    pull: missing # don't start, just pull
-    net: default # workaround bug: https://github.com/ansible/ansible-modules-core/issues/1885
+  docker_image:
+    name: registry:2
+    tag: registry
+    source: pull
