--- a/ansible/roles/debug/tasks/net-tools.yml
+++ b/ansible/roles/debug/tasks/net-tools.yml
@@ -1,7 +1,5 @@
 ---
 - name: Install net-tools
-  yum: >
-    name={{item}}
-    state=present
-  with_items:
-   - net-tools
+  yum:
+    name: net-tools
+    state: present
